--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shopping or Holiday</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Shopping List</h1>
+    <ol>
+        <li data-ns-test="shoppingList">New Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Designer Watch</li>
+    </ol>
 
+    <h1>Holiday Destinations</h1>
+    <ul>
+        <li data-ns-test="holidayList">Maldives</li>
+        <li data-ns-test="holidayList">Paris, France</li>
+        <li data-ns-test="holidayList">Kyoto, Japan</li>
+    </ul>
 </body>
-
 </html>
